bart model created

--- a/aisystemapp/core/templates/core/index.html
+++ b/aisystemapp/core/templates/core/index.html
@@ -115,12 +115,12 @@
             </div>
         </div>
         {% endif %}
-
+<!-- 
         {% if user_input %}
         <div class="user-input">
             <strong>Your Text:</strong> "{{ user_input }}"
         </div>
-        {% endif %}
+        {% endif %} -->
     </div>
 </body>
 </html>
